--- a/styles/Frontpage.module.scss
+++ b/styles/Frontpage.module.scss
@@ -1,15 +1,13 @@
+@use "colors" as *;
+
 .hero {
   overflow: hidden;
   z-index: -1;
   height: 100%;
   width: 100vw;
   // position: relative;
-  background: rgb(251, 135, 49);
-  background: linear-gradient(
-    0deg,
-    rgba(251, 135, 49, 1) 0%,
-    rgba(254, 249, 241, 1) 100%
-  );
+  background: $orange-color;
+  background: linear-gradient(0deg, $orange-color 0%, $light-color 100%);
 
   .arrow {
     display: flex;
@@ -60,8 +58,7 @@
         width: 100%;
 
         h2 {
-          // transform: rotate(90deg);
-          color: #510926;
+          color: $darkred-color;
         }
       }
     }
@@ -100,8 +97,10 @@
   .frontpage_picture {
     grid-column: 2;
     opacity: 0.5;
-    background-image: url("/scene.webp");
-    background-size: cover;
+    // background-image: url("/scene.webp");
+    // background-size: cover;
+    object-fit: cover;
+    overflow: hidden;
     height: 100vh;
     width: 100vw;
   }
@@ -121,13 +120,13 @@
   }
 
   .ticketsLink {
-    background-color: #510926;
-    color: #fef0e0;
+    background-color: $darkred-color;
+    color: $light-color;
   }
 
   .scheduleLink {
-    background-color: #fef0e0;
-    color: #510926;
+    background-color: $light-color;
+    color: $darkred-color;
   }
 
   a:hover {
@@ -146,30 +145,23 @@
 }
 
 .container {
-  background: linear-gradient(to right, #41ffff, #fffd41);
+  background: linear-gradient(to right, $neon-blue, $neon-yellow);
   overflow: hidden;
   max-width: 100%;
-  // padding: 0 !important;
   padding: 1rem;
 
   .banner {
     width: 2972px;
-
-    // overflow: hidden;
     display: flex;
     font-size: 3rem;
     gap: 4rem;
     padding-top: 1rem;
     padding-bottom: 1rem;
-
     white-space: nowrap;
-
-    // gap: 3rem;
     animation: bannermove 20s linear infinite;
 
     p {
       display: inline-block;
-      // width: 1200px;
     }
   }
 
