--- a/styles/Frontpage.module.scss
+++ b/styles/Frontpage.module.scss
@@ -5,7 +5,6 @@
   z-index: -1;
   height: 100%;
   width: 100vw;
-  // position: relative;
   background: $orange-color;
   background: linear-gradient(0deg, $orange-color 0%, $light-color 100%);
 
@@ -14,9 +13,9 @@
     width: 100vw;
     justify-content: center;
     position: absolute;
-    top: 85vh;
+    top: 86vh;
     animation-name: pulse_kf;
-    animation-duration: 2s;
+    animation-duration: 1.7s;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
   }
@@ -99,10 +98,10 @@
     opacity: 0.5;
     // background-image: url("/scene.webp");
     // background-size: cover;
-    object-fit: cover;
+    // object-fit: contain;
     overflow: hidden;
     height: 100vh;
-    width: 100vw;
+    width: 50vw;
   }
 }
 
